FinFamily Release notes

At least for now releases follow the Subversion revision numbers. Numbers in the headers show download counts for the older version. Earlier release notes are in releasenotes0172

Release 621 on 8 jul 2010

* Fixed problems with sorting database view

Release 618 on 1 jul 2010

* Added datecontrol to search dialog for update/created dates
* Added indicator if FamilyTree children have own children or parents also have parents

Release 609 on 30 jun 2010

* Fixes to compare imported persons.

Release 605 on 29 jun 2010

* Check for existing persons added to import from other database

Release 596 on 17 jun 2010

* Added Import from other database

Release 584 on 5 jun 2010 (91)

* Added rest of tables to backup. Fixed bug (from 580) in restore from Suku 2004

Release 580 on 1 jun 2010 (41)

* Backup/restore should now function with both FinFamily and Suku 2004 both directions
* Backup created into zip-file including images. Restore requires UnZip of the file.
* Create backup still "Under Construction". Possibly speed of backup needs to be improved.

Release 568 on 26 may 2010 (41)

* Database schema to be names Family database
* First draft version of create backup command. 
  Possible to import both to Suku 2004 and to Finfamily. 
  No guarantee on correctnes yet.

Release 563 on 25 may 2010 (37)

* FinFamily modified to use database schemas for the finfamily data.
  One database can now contain several genealogy schemas

Release 557 on 22 may 2010 (105)

* Table notice moved to be printed before table header
* FamilyTree view surety information added
* removed Intellisens feature from query arguments dialog

Release 548 on 19 may 2010 (39)

* Added place index to index (excel)file
* Added sources to report and source index to index (excel)file

Release 541 on 9 may 2010 (98)

* Added partly French language. Defaults to English when French word is missing.
* Preparations for possible GenGraph