@@ -3,6 +3,6 @@ package fi.kaila.suku.ant;
 /** Dont modify. Generated by Ant */
 public class AntVersion {
   	/** Generated version number by Ant */
-	public static final String antVersion = "11.-3.621a";
+	public static final String antVersion = "11.-3.635";
 }
   		
