@@ -2,6 +2,12 @@ FinFamily Release notes
 
 At least for now releases follow the Subversion revision numbers. Numbers in the headers show download counts for the older version. Earlier release notes are in releasenotes0172
 
+Release 635 on 20 jul 2010
+
+* Added alternative map from OpenStreetMaps service
+* Modified setup page to select map software
+* Modified structure of location data 
+
 Release 621 on 8 jul 2010
 
 * Fixed problems with sorting database view
